--- a/index.html
+++ b/index.html
@@ -13,10 +13,44 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="style.css" />
+
+    <title>Portfolio - Kamille Svalgaard</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <section class="flex">
+      <div id="projekter">
+        <video autoplay loop muted class="bagvid">
+          <source src="vid/første.mp4" type="video/mp4" />
+        </video>
+        <h2>Projekter</h2>
+      </div>
+      <div id="kompetencer">
+        <video autoplay loop muted class="bagvid">
+          <source src="vid/anden.mp4" type="video/mp4" />
+        </video>
+        <h1>
+          THIS IS MY <br />
+          PORTFOLIO
+        </h1>
+        <h2>Kompetencer</h2>
+      </div>
+      <div id="ommig">
+        <video autoplay loop muted class="bagvid">
+          <source src="vid/tredje.mp4" type="video/mp4" />
+        </video>
+        <a href="#ommig.html">
+          <h2>Om mig</h2>
+        </a>
+      </div>
+    </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -32,5 +66,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
+
+    <script src="script.js"></script>
   </body>
 </html>
