--- a/index.html
+++ b/index.html
@@ -26,27 +26,33 @@
   </head>
   <body>
     <section class="flex">
-      <div id="projekter">
-        <video autoplay loop muted class="bagvid">
-          <source src="vid/første.mp4" type="video/mp4" />
-        </video>
-        <h2>Projekter</h2>
+      <div id="ommig">
+        <a href="ommig.html">
+          <video autoplay loop muted class="bagvid">
+            <source src="vid/tredje.mp4" type="video/mp4" />
+          </video>
+          <h2>About</h2>
+        </a>
       </div>
       <div id="kompetencer">
-        <video autoplay loop muted class="bagvid">
-          <source src="vid/anden.mp4" type="video/mp4" />
-        </video>
-        <h1>
-          THIS IS MY <br />
-          PORTFOLIO
-        </h1>
-        <h2>Kompetencer</h2>
+        <a href="kompetencer.html">
+          <video autoplay loop muted class="bagvid">
+            <source src="vid/anden.mp4" type="video/mp4" />
+          </video>
+          <h1>
+            THIS IS MY <br />
+            PORTFOLIO
+          </h1>
+          <h2>Skills</h2>
+        </a>
       </div>
-      <div id="ommig">
-        <video autoplay loop muted class="bagvid">
-          <source src="vid/tredje.mp4" type="video/mp4" />
-        </video>
-        <h2>Om mig</h2>
+      <div id="projekter">
+        <a href="projekter.html">
+          <video autoplay loop muted class="bagvid">
+            <source src="vid/første.mp4" type="video/mp4" />
+          </video>
+          <h2>Projects</h2>
+        </a>
       </div>
     </section>
 
@@ -64,6 +70,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
 
     <script src="script.js"></script>
   </body>
