--- a/projekter.html
+++ b/projekter.html
@@ -25,18 +25,8 @@
     <title>Portfolio - Kamille Svalgaard</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="index.html">FRONT PAGE</a>
-        <a href="kompetencer.html">SKILLS</a>
-        <a href="projekter.html">PROJECTS</a>
-      </nav>
-    </header>
     <section>
-      <div class="introduktion">
-        <img src="afmig.png" class="afmig" alt="Et billede af mig" />
-        <h3>I AM KAMILLE</h3>
-      </div>
+      <h1>hej</h1>
     </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
@@ -53,8 +43,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
 
     <script src="script.js"></script>
   </body>
