--- a/ommig.html
+++ b/ommig.html
@@ -35,7 +35,45 @@
     <section>
       <div class="introduktion">
         <img src="afmig.png" class="afmig" alt="Et billede af mig" />
-        <h3>I AM KAMILLE</h3>
+        <div>
+          <h3>I AM KAMILLE</h3>
+          <p>
+            ...welcome to my page. <br />
+            <br />
+            I am 22 years old, currently based in Copenhagen.
+            <br />
+
+            Fashion and its many aspects is a huge passion of mine. The last
+            couple of years I have been working intensively within the fashion
+            industry to improve my work experience and expand my knowledge. From
+            my previous jobs, I have a lot of experience with dedicated work
+            environments. I get super motivated by getting and taking
+            responsibility, I love taking up challenges, I’m fast and good at
+            multitasking. I adjust very easily to my surroundings, which makes
+            me a great team player on a busy day. <br />
+            <br />
+            I put a lot of pride in contributing with a very organized,
+            independent and open mind, as I am good at being structured,
+            responsible and positively engaged in my work.
+          </p>
+          <div class="contact">
+            <h3>CONTACT INFORMATION</h3>
+            <p>Phone: +45 24 87 27 92</p>
+            <p>E-mail: millesval@hotmail.com</p>
+            <div class="social">
+              <a
+                target="blank"
+                href="https://www.instagram.com/kamillesvalgaard_/"
+                >Instagram</a
+              >
+              <a
+                target="blank"
+                href="https://www.linkedin.com/in/kamille-svalgaard-nielsen-b54983183/"
+                >LinkedIn</a
+              >
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
