--- a/projekter.html
+++ b/projekter.html
@@ -25,8 +25,18 @@
     <title>Portfolio - Kamille Svalgaard</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="index.html">FRONT PAGE</a>
+        <a href="ommig.html">ABOUT</a>
+        <a href="kompetencer.html">SKILLS</a>
+      </nav>
+    </header>
     <section>
-      <h1>hej</h1>
+      <div class="introduktion">
+        <img src="afmig.png" class="afmig" alt="Et billede af mig" />
+        <h3>CHOSEN PROJECTS</h3>
+      </div>
     </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
@@ -43,6 +53,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
 
     <script src="script.js"></script>
   </body>
