--- a/kompetencer.html
+++ b/kompetencer.html
@@ -33,29 +33,36 @@
       </nav>
     </header>
     <section>
-      <div class="introduktion">
-        <img src="afmig.png" class="afmig" alt="Et billede af mig" />
-        <div>
-          <h3>MY SKILLS</h3>
-          <p>
-            I strive to convey messages and tell stories through digital
-            marketing. <br />
-            Via my studies, I have learned about branding, SoMe, journalism and
-            marketing strategies. I have worked with user interfaces (UI) and
-            user experiences (UX), as well as the creative process of graphical
-            design. I know how to adapt and create digital content to a specific
-            audience, and I know how to build a brand identity through
-            progressive strategies. I have a large technical understanding, as I
-            have also worked with coding, photography and filmmaking.
-          </p>
-          <h3>CV</h3>
-          <p>
-            Fashion Assistant at Costume Magazine Fashion Illustrator course at
-            SAFD 1 2019 (Nov) – 2020 (April) 2020 (May – July) 2020 (June -
-            Dec.) PR Intern at Chanel Scandinavia Freelance stylist and project
-            assistant with the PR agency Presskontakterna in Copenhagen PR &
-            Marketing Assistant at Saks Potts
-          </p>
+      <div class="introduktion2">
+        <div class="flexbox">
+          <div class="col-8">
+            <h3>MY SKILLS</h3>
+            <p>
+              I strive to convey messages and tell stories through digital
+              marketing. <br />
+              Via my studies, I have learned about branding, SoMe, journalism
+              and marketing strategies. I have worked with user interfaces (UI)
+              and user experiences (UX), as well as the creative process of
+              graphical design. I know how to adapt and create digital content
+              to a specific audience, and I know how to build a brand identity
+              through progressive strategies. I have a large technical
+              understanding, as I have also worked with coding, photography and
+              filmmaking.
+            </p>
+            <h3>CV</h3>
+            <img class="cv" src="cv.png" alt="mit cv i en tidslinje" />
+          </div>
+          <div class="col-4">
+            <h3>TOOLS</h3>
+            <div class="tools">
+              <p>GRAPHICAL DESIGN</p>
+              <p>ADOBE</p>
+              <p>WOKRING EXPERIENCE</p>
+              <p>CONTENT PRODUCTION</p>
+              <p>WEB DESIGN</p>
+              <p>BRANDING AND MARKETING</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
