--- a/projekter.html
+++ b/projekter.html
@@ -33,9 +33,76 @@
       </nav>
     </header>
     <section>
-      <div class="introduktion">
-        <img src="afmig.png" class="afmig" alt="Et billede af mig" />
+      <div class="introduktion2">
         <h3>CHOSEN PROJECTS</h3>
+        <div class="flexbox eks">
+          <img
+            class="col-6 loud"
+            src="loud.png"
+            alt="billede af loud-projekt"
+          />
+          <div class="col-6 radio">
+            <h4>CONTENT MANAGEMENT SYSTEM</h4>
+            <p>Her skal der stå bla bla</p>
+            <a
+              target="blank"
+              href="https://neanderpetersen.dk/kea/09_cms/radioloud/"
+              >SEE THE SITE</a
+            >
+          </div>
+        </div>
+        <div class="flexbox eks">
+          <div class="col-6 radio2">
+            <h4>BRANDING AND WEB DESIGN</h4>
+            <p>Her skal der stå bla bla</p>
+            <a
+              target="blank"
+              href="http://kamillesvalgaard.com/kea/2sem/eksamensprojekt/veatery_catering/"
+              >SEE THE SITE</a
+            >
+          </div>
+          <img
+            class="col-6 veatery"
+            src="veatery.png"
+            alt="billede af loud-projekt"
+          />
+        </div>
+        <div class="flexbox eks">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/AEkj_ubH8DA"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <div class="col-6 radio">
+            <h4>WEBFEATURE</h4>
+            <p>Her skal der stå bla bla</p>
+            <a
+              target="blank"
+              href="https://kamillesvalgaard.com/kea/3sem/webfeature/webfeature/?et_fb=1&PageSpeed=off"
+              >SEE THE SITE</a
+            >
+          </div>
+        </div>
+        <div class="flexbox eks">
+          <div class="col-6 radio2">
+            <h4>CONTENT MARKETING</h4>
+            <p>Her skal der stå bla bla</p>
+            <a
+              target="blank"
+              href="https://kamillesvalgaard.com/kea/3sem/content_marketing/cleanfuture/index.html"
+              >SEE THE SITE</a
+            >
+          </div>
+          <img
+            class="col-6 veatery"
+            src="clean.png"
+            alt="billede af loud-projekt"
+          />
+        </div>
       </div>
     </section>
 
