--- a/kompetencer.html
+++ b/kompetencer.html
@@ -24,7 +24,7 @@
 
     <title>Portfolio - Kamille Svalgaard</title>
   </head>
-  <body>
+  <body class="body2">
     <header>
       <nav>
         <a href="index.html">FRONT PAGE</a>
@@ -35,7 +35,7 @@
     <section>
       <div class="introduktion2">
         <div class="flexbox">
-          <div class="col-8">
+          <div class="col-8 fravenstre">
             <h3>MY SKILLS</h3>
             <p>
               I strive to convey messages and tell stories through digital
@@ -52,7 +52,7 @@
             <h3>CV</h3>
             <img class="cv" src="cv.png" alt="mit cv i en tidslinje" />
           </div>
-          <div class="col-4">
+          <div class="col-4 frahøjre">
             <h3>TOOLS</h3>
             <div class="tools">
               <p>GRAPHICAL DESIGN</p>
