--- a/ommig.html
+++ b/ommig.html
@@ -24,7 +24,7 @@
 
     <title>Portfolio - Kamille Svalgaard</title>
   </head>
-  <body>
+  <body class="body1">
     <header>
       <nav>
         <a href="index.html">FRONT PAGE</a>
@@ -34,8 +34,8 @@
     </header>
     <section>
       <div class="introduktion">
-        <img src="afmig.png" class="afmig" alt="Et billede af mig" />
-        <div>
+        <img src="afmig.png" class="afmig fravenstre" alt="Et billede af mig" />
+        <div class="frahøjre">
           <h3>I AM KAMILLE</h3>
           <p>
             ...welcome to my page. <br />
