--- a/projekter.html
+++ b/projekter.html
@@ -24,7 +24,7 @@
 
     <title>Portfolio - Kamille Svalgaard</title>
   </head>
-  <body>
+  <body class="body3">
     <header>
       <nav>
         <a href="index.html">FRONT PAGE</a>
@@ -35,7 +35,7 @@
     <section>
       <div class="introduktion2">
         <h3>CHOSEN PROJECTS</h3>
-        <div class="flexbox eks">
+        <div class="flexbox eks frahøjre">
           <img
             class="col-6 loud"
             src="loud.png"
@@ -43,7 +43,18 @@
           />
           <div class="col-6 radio">
             <h4>CONTENT MANAGEMENT SYSTEM</h4>
-            <p>Her skal der stå bla bla</p>
+            <p>
+              In this group project, we worked to establish a new website for
+              the Danish radio called Radio Loud. <br />
+              I was in charge of the group management, as well as building the
+              website through idea generating, mock-ups and finished website.
+              <br />
+              Through working with the Content Management System called
+              Wordpress, I was able to come up with our take on how the radio
+              could reach their target group the best. <br />
+              Feedback from representatives from the radio was amazing, and they
+              loved the ideas and thoughts behind the project.
+            </p>
             <a
               target="blank"
               href="https://neanderpetersen.dk/kea/09_cms/radioloud/"
@@ -51,10 +62,18 @@
             >
           </div>
         </div>
-        <div class="flexbox eks">
+        <div class="flexbox eks fravenstre1">
           <div class="col-6 radio2">
             <h4>BRANDING AND WEB DESIGN</h4>
-            <p>Her skal der stå bla bla</p>
+            <p>
+              With Veatery as my case on the 2nd semester exam project, I went
+              through all the processes I had worked with, to build a full brand
+              identity and marketing stragegy for the little start up company.
+              <br />
+              Togehter with my group, I was able to do a lot of research on the
+              target group, as a basis to produce the right content and build
+              the right site.
+            </p>
             <a
               target="blank"
               href="http://kamillesvalgaard.com/kea/2sem/eksamensprojekt/veatery_catering/"
@@ -67,7 +86,7 @@
             alt="billede af loud-projekt"
           />
         </div>
-        <div class="flexbox eks">
+        <div class="flexbox eks frahøjre1">
           <iframe
             width="560"
             height="315"
@@ -79,7 +98,17 @@
           ></iframe>
           <div class="col-6 radio">
             <h4>WEBFEATURE</h4>
-            <p>Her skal der stå bla bla</p>
+            <p>
+              This exact project was my first time working individually on a big
+              task in relation to my studies. The story behind my webfeature is
+              very personal to me, as my interview person Ketti has been a big
+              inspiration through my whole life. Therefore it was very important
+              to me, to build the story as good as possible. <br />
+              In this project I especially put a lot of time and energy into the
+              interview video you see on the left. Making Ketti cry when she saw
+              it, I knew I had manage to portrait her the way she wished, with
+              it still being relevant to my task.
+            </p>
             <a
               target="blank"
               href="https://kamillesvalgaard.com/kea/3sem/webfeature/webfeature/?et_fb=1&PageSpeed=off"
@@ -87,10 +116,17 @@
             >
           </div>
         </div>
-        <div class="flexbox eks">
+        <div class="flexbox eks fravenstre2">
           <div class="col-6 radio2">
             <h4>CONTENT MARKETING</h4>
-            <p>Her skal der stå bla bla</p>
+            <p>
+              Doing a full branding and content marketing for a fictional
+              product, was not an easy task. Nonetheless very exciting and
+              challenging in the good way. <br />
+              With creating all kinds of content for the product, building the
+              brand from the bottom, I worked my way to making a complete and
+              consistent brand identity.
+            </p>
             <a
               target="blank"
               href="https://kamillesvalgaard.com/kea/3sem/content_marketing/cleanfuture/index.html"
