--- a/kompetencer.html
+++ b/kompetencer.html
@@ -53,14 +53,15 @@
             <img class="cv" src="cv.png" alt="mit cv i en tidslinje" />
           </div>
           <div class="col-4 frahøjre">
-            <h3>TOOLS</h3>
+            <h3>STRENGTHS</h3>
             <div class="tools">
-              <p>GRAPHICAL DESIGN</p>
+              <p>PR & MARKETING</p>
+              <p>BRAND IDENTITY</p>
+              <p>COMMUNICATION DESIGN</p>
               <p>ADOBE</p>
-              <p>WOKRING EXPERIENCE</p>
-              <p>CONTENT PRODUCTION</p>
-              <p>WEB DESIGN</p>
-              <p>BRANDING AND MARKETING</p>
+              <p>WORKING EXPERIENCE</p>
+              <p>CONTENT CREATION & PRODUCTION</p>
+              <p>DIGITAL & WEB DESIGN</p>
             </div>
           </div>
         </div>
