--- a/ommig.html
+++ b/ommig.html
@@ -39,14 +39,12 @@
           <h3>I AM KAMILLE</h3>
           <p>
             ...welcome to my page. <br />
-            <br />
-            I am 22 years old, currently based in Copenhagen.
-            <br />
 
             Fashion and its many aspects is a huge passion of mine. The last
             couple of years I have been working intensively within the fashion
-            industry to improve my work experience and expand my knowledge. From
-            my previous jobs, I have a lot of experience with dedicated work
+            industry to improve my work experience and expand my knowledge. The
+            videos on the front page, are videos shot and created by me. From my
+            previous jobs, I have a lot of experience with dedicated work
             environments. I get super motivated by getting and taking
             responsibility, I love taking up challenges, I’m fast and good at
             multitasking. I adjust very easily to my surroundings, which makes
@@ -58,6 +56,7 @@
           </p>
           <div class="contact">
             <h3>CONTACT INFORMATION</h3>
+            <p>Currently based in Copenhagen.</p>
             <p>Phone: +45 24 87 27 92</p>
             <p>E-mail: millesval@hotmail.com</p>
             <div class="social">
